# RayTracing

./: .gitignore  AppMain.cpp  CMakeLists.txt  Controller.cpp  Controller.hh  README.md  Scene.cpp  SceneFactory.cpp  SceneFactory.hh  resources.qrc
DataService/: SetUp.hh
GUI/: Builder.cpp  Builder.hh  MainWindow.cpp  MainWindow.hh  about.ui  main.ui
Rays/: HitRecord.hh  Hittable.hh
Render/: BlinnPhongShading.cpp  BlinnPhongShading.hh  Camera.hh  CelShading.cpp  CelShading.hh  ColorShading.cpp  ColorShading.hh  NColorShading.cpp  NColorShading.hh  NormalShading.cpp  NormalShading.hh  RayTracing.cpp  RayTracing.hh  ShadingFactory.cpp  ShadingFactory.hh  ShadingStrategy.cpp  ShadingStrategy.hh
TemporalVW/: Animation.hh
VW/: SceneFactoryVirtual.cpp  SceneFactoryVirtual.hh
VW/Materials/: Lambertian.cpp  Material.cpp  Material.hh  MaterialFactory.cpp  MaterialFactory.hh  Metal.cpp  Metal.hh  Texture.cpp  Transparent.cpp  Transparent.hh
VW/Objects/: Box.cpp  Box.hh  Face.cpp  Face.hh  Mesh.cpp  Mesh.hh  Object.cpp  ObjectFactory.hh  Plane.cpp  Plane.hh  Sphere.hh  Triangle.cpp  Triangle.hh
VW/TG/: TranslateTG.hh
p1-raytoy-a04-main/: README.md  Scene.hh
p1-raytoy-a04-main/DataService/: SetUp.cpp
p1-raytoy-a04-main/GUI/: Builder.cpp  Builder.hh  MainWindow.cpp  main.ui
p1-raytoy-a04-main/Rays/: Ray.hh
p1-raytoy-a04-main/Render/: Camera.cpp  ColorShading.cpp  NormalShading.cpp
p1-raytoy-a04-main/VW/Lights/: Light.hh
p1-raytoy-a04-main/VW/Materials/: Lambertian.hh  MaterialFactory.cpp  Texture.hh
p1-raytoy-a04-main/VW/Objects/: Box.cpp  Object.hh  ObjectFactory.cpp  Plane.hh  Sphere.cpp  Triangle.cpp  Triangle.hh
p1-raytoy-a04-main/VW/TG/: TG.hh  TranslateTG.cpp
p1-raytoy-a04-main/resources/: oneBox.json  oneMeshExample.json  oneSphere.json  oneTriangle.json  setupRenderOneSphere.json  twoSpheres.json
resources/: .oneSphere.json.swp  .setupRenderOneSphere.json.swp  luigiScene.json  setupRenderSpheres.json  setupRenderTutorial0Spheres.json  setupRenderTwoSpheres.json  tutorial0Spheres.json
resources/tutorial2/: setupRenderOneSphere.json  setupRenderTwoSpheresCellShading.json  twoSpheresCelShading.json
resources/tutorial3/: metalTest.json  setupPas1.json  setupRenderThreeSpheres.json  twoSpheresTransparent.json
